# innsight

./: .env.sample  .gcloudignore  .gitignore  Makefile  Procfile  README.md  pyproject.toml
resources/: user_dict.txt
scripts/: main.py  nominatim_demo.py  ors_client.py  parser.py  point_in_polygon.py  tier.py
src/innsight/: app.py  cli.py  config.py  exceptions.py  health.py  llm_parser.py  logging_config.py  middleware.py  nominatim_client.py  ors_client.py  overpass_client.py  parser.py  pipeline.py  rating_service.py  recommender.py  services.py  tier.py
src/innsight/services/: accommodation_search_service.py  accommodation_service.py  geocode_service.py
tests/: conftest.py  test_api.py  test_app.py  test_cache_stats.py  test_cli.py  test_cli_unit.py  test_config_env.py  test_cors.py  test_health.py  test_health_endpoints.py  test_integration.py  test_jieba.py  test_lifecycle.py  test_logging_config.py  test_logging_environment.py  test_middleware.py  test_nominatim_client.py  test_ors_client.py  test_overpass_client.py  test_parser.py  test_performance_logging.py  test_pipeline.py  test_rate_limit.py  test_rating_config.py  test_rating_integration.py  test_rating_service.py  test_recommender.py  test_recommender_cache.py  test_reporter.py  test_services.py  test_tier.py  test_utils.py
tests/services/: test_accommodation_search_service.py  test_accommodation_service.py  test_geocode_service.py  test_isochrone_service.py  test_query_service.py  test_rank_accommodations.py  test_tier_service.py
