[project]
name = "innsight"
version = "0.1.0"
description = ""
authors = [
    {name = "cshif",email = "5175166+cshif@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "typer (>=0.16.0,<0.17.0)"
]

[project.scripts]
innsight = "innsight.cli:main"

[tool.poetry]
packages = [{include = "innsight", from = "src"}]

[tool.poetry.group.dev.dependencies]
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
